src/objects/SCRB_SalesOrder__c.object
<CustomObject>
    <fields>
        <fullName>Hudson_RIL_Monthly_Payment__c</fullName>
        <description>Reflects the Hudson RIL Monthly Payment from System Design Quote.</description>
        <formula>System_Design_Quote__r.Hudson_RIL_Monthly_Payment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Reflects the Hudson RIL Monthly Payment from System Design Quote.</inlineHelpText>
        <label>Hudson RIL Monthly Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Hudson_RIL_OID_Amount__c</fullName>
        <description>Reflects the Hudson RIL OID Amount field from System Design Quote.</description>
        <formula>System_Design_Quote__r.Hudson_RIL_OID_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Reflects the Hudson RIL OID Amount field from System Design Quote.</inlineHelpText>
        <label>Hudson RIL OID Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Hudson_RIL_Total_Payment__c</fullName>
        <description>Reflects the Hudson RIL Total Payment field from System Design Quote.</description>
        <formula>System_Design_Quote__r.Hudson_RIL_Total_Payment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Reflects the Hudson RIL Total Payment field from System Design Quote.</inlineHelpText>
        <label>Hudson RIL Total Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Hudson_SAC_Total_Payment__c</fullName>
        <description>Reflects the Hudson SAC Total Payment field from System Design Quote.</description>
        <formula>System_Design_Quote__r.Hudson_SAC_Total_Payment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Reflects the Hudson SAC Total Payment field from System Design Quote.</inlineHelpText>
        <label>Hudson SAC Total Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Incentive_Associate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Assigned Compliance Department Specialist</description>
        <inlineHelpText>Assigned Compliance Department Specialist</inlineHelpText>
        <label>Incentive Associate</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Sales_Orders_Incentive</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Initial_Sales_Order_Close_Date__c</fullName>
        <description>The Initial Sales Order Close Date value from the parent Opportunity of this Sales Order</description>
        <formula>OpportunityId__r.Initial_Sales_Order_Close_Date__c</formula>
        <inlineHelpText>The Initial Sales Order Close Date value from the parent Opportunity of this Sales Order</inlineHelpText>
        <label>Initial Sales Order Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Installation_Address_1__c</fullName>
        <label>Installation Address 1</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Installation_Address_2__c</fullName>
        <label>Installation Address 2</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Installation_City__c</fullName>
        <label>Installation City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Installation_Permit_Jurisdiction__c</fullName>
        <label>Installation Permit Jurisdiction</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Installation_State__c</fullName>
        <label>Installation State</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Installation_Zip_PostalCode__c</fullName>
        <label>Installation Zip/PostalCode</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Installed_Year__c</fullName>
        <description>Installation Year (or &quot;No&quot;)</description>
        <inlineHelpText>Installation Year (or &quot;No&quot;)</inlineHelpText>
        <label>Installed Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Id__c</fullName>
        <label>Job Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Coordinator_Approved__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Last Coordinator Approved</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Sales_Orders_LastCoordinatorApproved</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Resubmit_Sales_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Last Resubmit Sales Rep</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Sales_Orders_LastResubmitSalesRep</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lead_Source_Commission_Bonus__c</fullName>
        <label>Lead Source Commission Bonus ($)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Lead_Source__c</fullName>
        <description>Mapped from Opportunity Lead Source field</description>
        <inlineHelpText>Mapped from Opportunity Lead Source field</inlineHelpText>
        <label>Lead Source</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lease_Approval_Attached_Lease__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Lease ONLY - Lease Approval Attached</description>
        <inlineHelpText>Lease ONLY - Lease Approval Attached</inlineHelpText>
        <label>Lease Approval Attached (Lease)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lease_Capacity_Factor__c</fullName>
        <description>LEASE ONLY - Capacity Factor</description>
        <inlineHelpText>LEASE ONLY - Capacity Factor</inlineHelpText>
        <label>Lease Capacity Factor (%)</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Lease_Escalator__c</fullName>
        <description>LEASE ONLY - Escalator</description>
        <inlineHelpText>LEASE ONLY - Escalator</inlineHelpText>
        <label>Sold Lease Escalator (%)</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Lease_Financing_Approved_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>LEASE ONLY - What User Approved This Lease&apos;s Financing</description>
        <inlineHelpText>LEASE ONLY - What User Approved This Lease&apos;s Financing</inlineHelpText>
        <label>Lease Financing Approved By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Sales_Orders_Financing_Approved</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lease_Fund__c</fullName>
        <description>Lease Fund</description>
        <inlineHelpText>Lease Fund</inlineHelpText>
        <label>Lease Fund</label>
        <picklist>
            <picklistValues>
                <fullName>ASTRUM - M210</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ASTRUM - SUNPOWER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CITI1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CITI2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CITI2 - M210</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CPF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GOLDMAN1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Goldman - Do Not Install</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MA - SPECIAL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NJ - SPECIAL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VA - ASTRUM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VA - TBR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tredegar Solar Fund I, LLC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NRG Residential Solar Solutions, LLC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sunnova Energy Corporation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Goldman - Do Not Install - Credit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Astrum Fund 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Astrum 1603</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kilowatt Systems, LLC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CT Lease</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lease_PPA_Fund__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lease/PPA Fund</label>
        <lookupFilter>
            <active>false</active>
            <booleanFilter>1 OR 2 OR 3 OR 4 OR 5 OR 6</booleanFilter>
            <filterItems>
                <field>$Profile.Name</field>
                <operation>equals</operation>
                <value>Lease Administrator</value>
            </filterItems>
            <filterItems>
                <field>$Profile.Name</field>
                <operation>equals</operation>
                <value>Controller</value>
            </filterItems>
            <filterItems>
                <field>$Profile.Name</field>
                <operation>equals</operation>
                <value>VP of Sales</value>
            </filterItems>
            <filterItems>
                <field>$Profile.Name</field>
                <operation>equals</operation>
                <value>VP of Operations</value>
            </filterItems>
            <filterItems>
                <field>$Profile.Name</field>
                <operation>equals</operation>
                <value>System Administrator</value>
            </filterItems>
            <filterItems>
                <field>$Source.StatusCode__c</field>
                <operation>notEqual</operation>
                <value>Submit Pending, Cancel Pending, Canceled, New, On Hold</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Lease_Fund__c</referenceTo>
        <relationshipLabel>Sales Orders</relationshipLabel>
        <relationshipName>Sales_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lease_Term_months__c</fullName>
        <description>LEASE ONLY - Lease Term in Months</description>
        <inlineHelpText>LEASE ONLY - Lease Term in Months</inlineHelpText>
        <label>Lease Term (months)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Leasing_Option__c</fullName>
        <description>Which Leasing Option Did The Customer Select?</description>
        <inlineHelpText>Which Leasing Option Did The Customer Select?</inlineHelpText>
        <label>Leasing Option</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Leasing_SREC_Curve__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>LEASE ONLY - SREC Curve this Lease is Sold Into</description>
        <inlineHelpText>LEASE ONLY - SREC Curve this Lease is Sold Into</inlineHelpText>
        <label>Leasing SREC Curve</label>
        <referenceTo>Leasing_SREC_Curve__c</referenceTo>
        <relationshipLabel>Sales Orders</relationshipLabel>
        <relationshipName>Sales_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LineItemAmount__c</fullName>
        <label>Line Item Amount</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Manager_Override__c</fullName>
        <formula>OpportunityId__r.Amount * $Setup.ContractSettings__c.Manager_Override_Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Manager Override ($)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Obstruction_Elevation_Attached__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The Obstruction Elevation for the System That was Sold is Attached to The Survey Object</description>
        <inlineHelpText>Is The Obstruction Elevation for the System That was Sold Attached to The Survey Object?</inlineHelpText>
        <label>Obstruction Elevation Attached</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>On_Hold_Comments__c</fullName>
        <description>Comments to explain On-Hold status</description>
        <inlineHelpText>Comments to explain On-Hold status</inlineHelpText>
        <label>On-Hold Comments</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>OpportunityId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Sales Orders</relationshipLabel>
        <relationshipName>R00N300000011q6hEAA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OpportunityName__c</fullName>
        <formula>OpportunityId__r.Name</formula>
        <label>OpportunityName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Close_Date_Lookup__c</fullName>
        <description>Opportunity Close Date (Lookup)</description>
        <formula>OpportunityId__r.CloseDate</formula>
        <inlineHelpText>Opportunity Close Date (Lookup)</inlineHelpText>
        <label>Opportunity Close Date (Lookup)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opportunity_Close_Date__c</fullName>
        <label>Opportunity Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opportunity_Stage__c</fullName>
        <formula>TEXT(OpportunityId__r.StageName)</formula>
        <label>Opportunity Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ops_Submitted_Date__c</fullName>
        <description>The moment the Project Lead submitted this Sales Order to the next step of the approval process. This field is populated by the &quot;Timestamp Ops Submitted Date&quot; field update in the &quot;SO PostOps Contract Admin Approval&quot; approval process</description>
        <inlineHelpText>The moment the Project Lead submitted this Sales Order to the next step of the approval process. This field is populated by the &quot;Timestamp Ops Submitted Date&quot; field update in the &quot;SO PostOps Contract Admin Approval&quot; approval process</inlineHelpText>
        <label>Ops Submitted Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Orig_Amount__c</fullName>
        <description>Original Amount</description>
        <label>Orig Amount</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Orig_Astrum_Lease_Revenue__c</fullName>
        <description>Orig Astrum Revenue on Leased System</description>
        <label>Orig Astrum Lease Revenue ($)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Orig_Astrum_Upfront_SREC_Value__c</fullName>
        <description>Original Value of Upfront SREC acquired by Astrum</description>
        <label>Orig Astrum Upfront SREC Value ($)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Orig_Base_Electricity_Price__c</fullName>
        <description>Orig Base Electricity Price</description>
        <label>Orig Base Electricity Price</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Orig_CEG_Deposit__c</fullName>
        <description>Orig CEG Deposit ($)</description>
        <label>Orig CEG Deposit ($)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Orig_CEG_FMV_per_Watt_W__c</fullName>
        <description>Orig CEG FMV per Watt ($/W)</description>
        <label>Orig CEG FMV per Watt ($/W)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Orig_CEG_Total_System_Price_Lookup__c</fullName>
        <description>Orig CEG Total System Price Lookup ($)</description>
        <label>Orig CEG Total System Price Lookup ($)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Orig_CEG_Total_System_Price_W__c</fullName>
        <description>Orig CEG Total System Price ($/W)</description>
        <label>Orig CEG Total System Price ($/W)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Orig_CEG_Total_System_Price__c</fullName>
        <description>Orig CEG Total System Price ($)</description>
        <label>Orig CEG Total System Price ($)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Orig_CP_Model_Days__c</fullName>
        <description>Orig CP Model (days)</description>
        <label>Orig CP Model (days)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Orig_CSD_Pricing__c</fullName>
        <description>Orig CSD Pricing</description>
        <label>Orig CSD Pricing</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Orig_Constellation_Job_Id__c</fullName>
        <description>Orig Constellation Job Id</description>
        <label>Orig Constellation Job Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Orig_Constellation_Lease_Inverters__c</fullName>
        <description>Orig Constellation Lease Inverters</description>
        <label>Orig Constellation Lease Inverters</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Orig_Down_Payment__c</fullName>
        <description>Orig Down Payment Included on Contract</description>
        <label>Orig Down Payment Included on Contract</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Orig_Escalation_Comments__c</fullName>
        <description>Orig Escalation Comments</description>
        <label>Orig Escalation Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Orig_FCRA_Letter_Mailed__c</fullName>
        <description>Orig FCRA Letter Mailed</description>
        <label>Orig FCRA Letter Mailed</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Orig_Financing_Type__c</fullName>
        <description>Orig Financing Type</description>
        <label>Orig Financing Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Orig_Installed_Year__c</fullName>
        <description>Orig Installed Year</description>
        <label>Orig Installed Year</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Orig_Lease_Capacity_Factor__c</fullName>
        <description>Orig Lease Capacity Factor (%)</description>
        <label>Orig Lease Capacity Factor (%)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Orig_Lease_Escalator__c</fullName>
        <description>Orig Lease Escalator (%)</description>
        <label>Orig Lease Escalator (%)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Orig_Lease_Financing_Approved_By__c</fullName>
        <description>Orig Lease Financing Approved By</description>
        <label>Orig Lease Financing Approved By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Orig_Lease_Fund__c</fullName>
        <description>Orig Lease Fund</description>
        <label>Orig Lease Fund</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Orig_Lease_Term_months__c</fullName>
        <description>Orig Lease Term (months)</description>
        <label>Orig Lease Term (months)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Orig_Leasing_Option__c</fullName>
        <description>Orig Leasing Option</description>
        <label>Orig Leasing Option</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Orig_Leasing_SREC_Curve__c</fullName>
        <description>Orig Leasing SREC Curve</description>
        <label>Orig Leasing SREC Curve</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Orig_Opportunity_Close_Date_Lookup__c</fullName>
        <description>Orig Opportunity Close Date (Lookup)</description>
        <label>Orig Opportunity Close Date (Lookup)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Orig_Opportunity_Close_Date__c</fullName>
        <description>Orig Opportunity Close Date</description>
        <label>Orig Opportunity Close Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Orig_Populated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check to see if Lease Fields are Copied to Orig Fields</description>
        <label>Orig Populated ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Orig_Potential_Lease_Inverters__c</fullName>
        <description>Orig Potential Lease Inverters</description>
        <label>Orig Potential Lease Inverters</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Orig_Pricebook__c</fullName>
        <description>Orig Price Book</description>
        <label>Orig Price Book</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Orig_Projected_Annual_SRECs_Generated__c</fullName>
        <description>Orig Projected Annual SRECs Generated</description>
        <label>Orig Projected Annual SRECs Generated</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Orig_Projected_Annual_SRECs_UnTruncated__c</fullName>
        <description>Orig Projected Annual SRECs UnTruncated</description>
        <label>Orig Projected Annual SRECs UnTruncated</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Orig_Quoted_System_Site_Quality__c</fullName>
        <description>Orig Quoted System Site Quality</description>
        <label>Orig Quoted System Site Quality</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Orig_RequestedShipmentOn__c</fullName>
        <description>Orig Requested Installation On</description>
        <label>Orig Requested Installation On</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Orig_SREC_Responsible_Party__c</fullName>
        <description>Orig SREC Responsible Party</description>
        <label>Orig SREC Responsible Party</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Orig_SState_Grant_Date_Paid_To_CEG__c</fullName>
        <description>Orig State Grant Date Paid To CEG</description>
        <label>Orig State Grant Date Paid To CEG</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Orig_Sales_Error_Tracking__c</fullName>
        <description>Orig Sales Error Tracking</description>
        <label>Orig Sales Error Tracking</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Orig_Sales_Order_Approval_Comments__c</fullName>
        <description>Orig SO Approval/Rejection Comments</description>
        <label>Orig SO Approval/Rejection Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Orig_Sales_Order_Approval_Date__c</fullName>
        <description>Orig Sales Order Approval Date</description>
        <label>Orig Sales Order Approval Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Orig_Sales_Tax_First_Month__c</fullName>
        <description>Orig Sales Tax First Month</description>
        <label>Orig Sales Tax First Month</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Orig_Sales_Tax_Paid_to_CEG_Date__c</fullName>
        <description>Orig Sales Tax Paid to CEG (Date)</description>
        <label>Orig Sales Sales Tax Paid to CEG (Date)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Orig_Sales_Tax_Percentage__c</fullName>
        <description>Orig Sales Tax Percentage (%)</description>
        <label>Orig Sales Sales Tax Percentage (%)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Orig_Sales_Tax_Prepaid__c</fullName>
        <description>Orig Sales Tax Prepaid</description>
        <label>Orig Sales Tax Prepaid</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Orig_State_Grant_Estimated_vs_Actual__c</fullName>
        <description>Orig State Grant Estimated vs Actual</description>
        <label>Orig State Grant Estimated vs Actual</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Orig_State_Grant_Received_Date__c</fullName>
        <description>Orig State Grant Received (Date)</description>
        <label>Orig State Grant Received (Date)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Orig_State_Grant_Received__c</fullName>
        <description>Orig State Grant Received ($)</description>
        <label>Orig State Grant Received ($)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Orig_State_Grant_W__c</fullName>
        <description>Orig State Grant ($/W)</description>
        <label>Orig State Grant ($/W)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Orig_System_Makeup__c</fullName>
        <description>Orig System Makeup</description>
        <label>Orig System Makeup</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Orig_System_Size_kW__c</fullName>
        <description>Orig System Size (kW)</description>
        <label>Orig System Size (kW)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Orig_Total_Grant_Amount__c</fullName>
        <description>Orig Total Grant Amount ($)</description>
        <label>Orig Total Grant Amount ($)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Orig_Total_Panel_Count__c</fullName>
        <description>Orig Total Panel Count</description>
        <label>Orig Total Panel Count</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Orig_Total_State_Grant_Est__c</fullName>
        <description>Orig Total State Grant (Est.) ($)</description>
        <label>Orig Total State Grant (Est.) ($)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Orig_Total_Upfront_Lease_Payment__c</fullName>
        <description>Orig Total Upfront Lease Payment</description>
        <label>Orig Total Upfront Lease Payment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Orig_Tranche_Number__c</fullName>
        <description>Orig Tranche Number</description>
        <label>Orig Tranche Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Orig_Treasury_Grant_Approval_Date__c</fullName>
        <description>Orig Treasury Grant Approval Date</description>
        <label>Orig Treasury Grant Approval Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Orig_Treasury_Grant_Filing_Date__c</fullName>
        <description>Orig Treasury Grant Filing Date</description>
        <label>Orig Treasury Grant Filing Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Orig_Treasury_Grant_Received_Amount__c</fullName>
        <description>Orig Treasury Grant Received Amount</description>
        <label>Orig Treasury Grant Received Amount</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Orig_Treasury_Grant_Requested_Amount__c</fullName>
        <description>Orig Treasury Grant Requested Amount</description>
        <label>Orig Treasury Grant Requested Amount</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Orig_Trsury_Grant_Req_vs_Recvd__c</fullName>
        <description>Orig Treasury Grant Requested vs Received</description>
        <label>Orig Trsury Grant Reqstd vs Recvd</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Orig_Upfrnt_Lease_Pmt_DueAtInstl__c</fullName>
        <description>Orig Upfront Lease Payment Due At Install</description>
        <label>Orig Upfnt Lease Paymt Due At Instl</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Orig_Upfrnt_Lease_Pmt_DueAtSign__c</fullName>
        <description>Orig Upfront Lease Payment Due At Signing</description>
        <label>Orig Upfrt Lease Paymt Due At Sign</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Orig_VP_of_Sales_Notes__c</fullName>
        <description>Orig VP of Sales Notes</description>
        <label>Orig VP of Sales Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Orig_Year_1__c</fullName>
        <description>Orig Year 1 Monthly Payment</description>
        <label>Orig Year 1 Monthly Payment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Original_Submit_Sales_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Original Submit Sales Rep</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Sales_Orders_OriginalSubmitSalesRep</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OriginatingDocument__c</fullName>
        <label>Originating Document</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Owner User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Sales_Orders1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PaymentTerms__c</fullName>
        <label>Payment Terms</label>
        <picklist>
            <picklistValues>
                <fullName>Net 30</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>2% 10/Net 30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Net 45</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Net 60</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Pending_Change_Requests_Count__c</fullName>
        <inlineHelpText>Number of Change Requests not marked Complete/Ready to Install</inlineHelpText>
        <label>Pending Change Requests Count</label>
        <summaryFilterItems>
            <field>Change_Request__c.Status__c</field>
            <operation>notEqual</operation>
            <value>Complete/Ready for Install, Cancelled</value>
        </summaryFilterItems>
        <summaryForeignKey>Change_Request__c.Sales_Order__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Percent_Complete__c</fullName>
        <formula>IF( AND(Total_Cost_Actual__c&gt;0, Total_Cost_Budget__c&gt;0),(Total_Cost_Actual__c /  Total_Cost_Budget__c),0 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Percent Complete</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Potential_Lease_Inverters__c</fullName>
        <label>Potential Lease Inverters</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prelim_Approval_Date__c</fullName>
        <label>Prelim Approval Date</label>
        <type>DateTime</type>
    </fields>
</CustomObject>